# vscode-msi

./: .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .vscodeignore  Cargo.toml  LICENSE.txt  README.md  package-lock.json  package.json  rust-toolchain  webpack.config.js
crates/msi-wasm/: Cargo.toml
crates/msi-wasm/src/: lib.rs
src/: dispose.ts  document.ts  extension.ts  index.html  registry.ts  rowsview.ts  tablesview.ts  util.ts
src/test/: runTest.ts
src/test/suite/: extension.test.ts  index.ts
