[package]
name = "msi-wasm"
version = "0.1.0"
edition = "2021"
authors = [
    "Heath Stewart (https://github.com/heaths)",
]
repository = "https://github.com/heaths/vscode-msi"
readme = false
license-file = "../../LICENSE.txt"
description = """
WebAssembly module that provides Windows Installer package information for a Visual Studio Code extension.
"""

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
msi = "0.5.0"
serde = "1.0.152"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
